// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLogsExtractionEsqlQuery generates the expected query for generic entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((entity.id IS NOT NULL AND entity.id != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = entity.id
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE entity.name IS NOT NULL,
 recent.entity.source = LAST(TO_STRING(entity.source), @timestamp) WHERE entity.source IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(entity.type), @timestamp) WHERE entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(entity.sub_type), @timestamp) WHERE entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(entity.url), @timestamp) WHERE entity.url IS NOT NULL,
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(entity.attributes.Privileged), @timestamp) WHERE entity.attributes.Privileged IS NOT NULL,
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(entity.attributes.Asset), @timestamp) WHERE entity.attributes.Asset IS NOT NULL,
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(entity.attributes.Managed), @timestamp) WHERE entity.attributes.Managed IS NOT NULL,
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(entity.attributes.Mfa_enabled), @timestamp) WHERE entity.attributes.Mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(entity.lifecycle.First_seen), @timestamp) WHERE entity.lifecycle.First_seen IS NOT NULL,
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(entity.lifecycle.Last_activity), @timestamp) WHERE entity.lifecycle.Last_activity IS NOT NULL,
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(entity.behaviors.Brute_force_victim), @timestamp) WHERE entity.behaviors.Brute_force_victim IS NOT NULL,
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(entity.behaviors.New_country_login), @timestamp) WHERE entity.behaviors.New_country_login IS NOT NULL,
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(entity.behaviors.Used_usb_device), @timestamp) WHERE entity.behaviors.Used_usb_device IS NOT NULL,
 recent.entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp) WHERE entity.risk.calculated_level IS NOT NULL,
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp) WHERE entity.risk.calculated_score IS NOT NULL,
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp) WHERE entity.risk.calculated_score_norm IS NOT NULL,
 recent.cloud.account.id = LAST(TO_STRING(cloud.account.id), @timestamp) WHERE cloud.account.id IS NOT NULL,
 recent.cloud.account.name = LAST(TO_STRING(cloud.account.name), @timestamp) WHERE cloud.account.name IS NOT NULL,
 recent.cloud.availability_zone = LAST(TO_STRING(cloud.availability_zone), @timestamp) WHERE cloud.availability_zone IS NOT NULL,
 recent.cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE cloud.instance.id IS NOT NULL,
 recent.cloud.instance.name = LAST(TO_STRING(cloud.instance.name), @timestamp) WHERE cloud.instance.name IS NOT NULL,
 recent.cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE cloud.machine.type IS NOT NULL,
 recent.cloud.project.id = LAST(TO_STRING(cloud.project.id), @timestamp) WHERE cloud.project.id IS NOT NULL,
 recent.cloud.project.name = LAST(TO_STRING(cloud.project.name), @timestamp) WHERE cloud.project.name IS NOT NULL,
 recent.cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE cloud.provider IS NOT NULL,
 recent.cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE cloud.region IS NOT NULL,
 recent.cloud.service.name = LAST(TO_STRING(cloud.service.name), @timestamp) WHERE cloud.service.name IS NOT NULL,
 recent.host.architecture = LAST(TO_STRING(host.architecture), @timestamp) WHERE host.architecture IS NOT NULL,
 recent.host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp) WHERE host.boot.id IS NOT NULL,
 recent.host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 recent.host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp) WHERE host.disk.read.bytes IS NOT NULL,
 recent.host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp) WHERE host.disk.write.bytes IS NOT NULL,
 recent.host.domain = LAST(TO_STRING(host.domain), @timestamp) WHERE host.domain IS NOT NULL,
 recent.host.hostname = LAST(TO_STRING(host.hostname), @timestamp) WHERE host.hostname IS NOT NULL,
 recent.host.id = LAST(TO_STRING(host.id), @timestamp) WHERE host.id IS NOT NULL,
 recent.host.mac = LAST(TO_STRING(host.mac), @timestamp) WHERE host.mac IS NOT NULL,
 recent.host.name = LAST(TO_STRING(host.name), @timestamp) WHERE host.name IS NOT NULL,
 recent.host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp) WHERE host.network.egress.bytes IS NOT NULL,
 recent.host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp) WHERE host.network.egress.packets IS NOT NULL,
 recent.host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp) WHERE host.network.ingress.bytes IS NOT NULL,
 recent.host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp) WHERE host.network.ingress.packets IS NOT NULL,
 recent.host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp) WHERE host.pid_ns_ino IS NOT NULL,
 recent.host.type = LAST(TO_STRING(host.type), @timestamp) WHERE host.type IS NOT NULL,
 recent.host.uptime = LAST(TO_LONG(host.uptime), @timestamp) WHERE host.uptime IS NOT NULL,
 recent.host.ip = LAST(TO_IP(host.ip), @timestamp) WHERE host.ip IS NOT NULL,
 recent.user.domain = LAST(TO_STRING(user.domain), @timestamp) WHERE user.domain IS NOT NULL,
 recent.user.email = LAST(TO_STRING(user.email), @timestamp) WHERE user.email IS NOT NULL,
 recent.user.roles = LAST(TO_STRING(user.roles), @timestamp) WHERE user.roles IS NOT NULL,
 recent.user.hash = LAST(TO_STRING(user.hash), @timestamp) WHERE user.hash IS NOT NULL,
 recent.user.id = LAST(TO_STRING(user.id), @timestamp) WHERE user.id IS NOT NULL,
 recent.user.name = LAST(TO_STRING(user.name), @timestamp) WHERE user.name IS NOT NULL,
 recent.user.full_name = LAST(TO_STRING(user.full_name), @timestamp) WHERE user.full_name IS NOT NULL,
 recent.orchestrator.api_version = LAST(TO_STRING(orchestrator.api_version), @timestamp) WHERE orchestrator.api_version IS NOT NULL,
 recent.orchestrator.cluster.id = LAST(TO_STRING(orchestrator.cluster.id), @timestamp) WHERE orchestrator.cluster.id IS NOT NULL,
 recent.orchestrator.cluster.name = LAST(TO_STRING(orchestrator.cluster.name), @timestamp) WHERE orchestrator.cluster.name IS NOT NULL,
 recent.orchestrator.cluster.url = LAST(TO_STRING(orchestrator.cluster.url), @timestamp) WHERE orchestrator.cluster.url IS NOT NULL,
 recent.orchestrator.cluster.version = LAST(TO_STRING(orchestrator.cluster.version), @timestamp) WHERE orchestrator.cluster.version IS NOT NULL,
 recent.orchestrator.namespace = LAST(TO_STRING(orchestrator.namespace), @timestamp) WHERE orchestrator.namespace IS NOT NULL,
 recent.orchestrator.organization = LAST(TO_STRING(orchestrator.organization), @timestamp) WHERE orchestrator.organization IS NOT NULL,
 recent.orchestrator.resource.annotation = LAST(TO_STRING(orchestrator.resource.annotation), @timestamp) WHERE orchestrator.resource.annotation IS NOT NULL,
 recent.orchestrator.resource.id = LAST(TO_STRING(orchestrator.resource.id), @timestamp) WHERE orchestrator.resource.id IS NOT NULL,
 recent.orchestrator.resource.ip = LAST(TO_STRING(orchestrator.resource.ip), @timestamp) WHERE orchestrator.resource.ip IS NOT NULL,
 recent.orchestrator.resource.label = LAST(TO_STRING(orchestrator.resource.label), @timestamp) WHERE orchestrator.resource.label IS NOT NULL,
 recent.orchestrator.resource.name = LAST(TO_STRING(orchestrator.resource.name), @timestamp) WHERE orchestrator.resource.name IS NOT NULL,
 recent.orchestrator.resource.parent.type = LAST(TO_STRING(orchestrator.resource.parent.type), @timestamp) WHERE orchestrator.resource.parent.type IS NOT NULL,
 recent.orchestrator.resource.type = LAST(TO_STRING(orchestrator.resource.type), @timestamp) WHERE orchestrator.resource.type IS NOT NULL,
 recent.orchestrator.type = LAST(TO_STRING(orchestrator.type), @timestamp) WHERE orchestrator.type IS NOT NULL,
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp) WHERE _index IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp) WHERE entity.risk.calculated_level IS NOT NULL,
 recent.entity.risk.calculated_score = LAST(entity.risk.calculated_score, @timestamp) WHERE entity.risk.calculated_score IS NOT NULL,
 recent.entity.risk.calculated_score_norm = LAST(entity.risk.calculated_score_norm, @timestamp) WHERE entity.risk.calculated_score_norm IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"generic:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 cloud.account.id = COALESCE(recent.cloud.account.id, cloud.account.id),
 cloud.account.name = COALESCE(recent.cloud.account.name, cloud.account.name),
 cloud.availability_zone = COALESCE(recent.cloud.availability_zone, cloud.availability_zone),
 cloud.instance.id = COALESCE(recent.cloud.instance.id, cloud.instance.id),
 cloud.instance.name = COALESCE(recent.cloud.instance.name, cloud.instance.name),
 cloud.machine.type = COALESCE(recent.cloud.machine.type, cloud.machine.type),
 cloud.project.id = COALESCE(recent.cloud.project.id, cloud.project.id),
 cloud.project.name = COALESCE(recent.cloud.project.name, cloud.project.name),
 cloud.provider = COALESCE(recent.cloud.provider, cloud.provider),
 cloud.region = COALESCE(recent.cloud.region, cloud.region),
 cloud.service.name = COALESCE(recent.cloud.service.name, cloud.service.name),
 host.architecture = COALESCE(recent.host.architecture, host.architecture),
 host.boot.id = COALESCE(recent.host.boot.id, host.boot.id),
 host.cpu.usage = COALESCE(recent.host.cpu.usage, host.cpu.usage),
 host.disk.read.bytes = COALESCE(recent.host.disk.read.bytes, host.disk.read.bytes),
 host.disk.write.bytes = COALESCE(recent.host.disk.write.bytes, host.disk.write.bytes),
 host.domain = COALESCE(recent.host.domain, host.domain),
 host.hostname = COALESCE(recent.host.hostname, host.hostname),
 host.id = COALESCE(recent.host.id, host.id),
 host.mac = COALESCE(recent.host.mac, host.mac),
 host.name = COALESCE(recent.host.name, host.name),
 host.network.egress.bytes = COALESCE(recent.host.network.egress.bytes, host.network.egress.bytes),
 host.network.egress.packets = COALESCE(recent.host.network.egress.packets, host.network.egress.packets),
 host.network.ingress.bytes = COALESCE(recent.host.network.ingress.bytes, host.network.ingress.bytes),
 host.network.ingress.packets = COALESCE(recent.host.network.ingress.packets, host.network.ingress.packets),
 host.pid_ns_ino = COALESCE(recent.host.pid_ns_ino, host.pid_ns_ino),
 host.type = COALESCE(recent.host.type, host.type),
 host.uptime = COALESCE(recent.host.uptime, host.uptime),
 host.ip = COALESCE(recent.host.ip, host.ip),
 user.domain = COALESCE(recent.user.domain, user.domain),
 user.email = COALESCE(recent.user.email, user.email),
 user.roles = COALESCE(recent.user.roles, user.roles),
 user.hash = COALESCE(recent.user.hash, user.hash),
 user.id = COALESCE(recent.user.id, user.id),
 user.name = COALESCE(recent.user.name, user.name),
 user.full_name = COALESCE(recent.user.full_name, user.full_name),
 orchestrator.api_version = COALESCE(recent.orchestrator.api_version, orchestrator.api_version),
 orchestrator.cluster.id = COALESCE(recent.orchestrator.cluster.id, orchestrator.cluster.id),
 orchestrator.cluster.name = COALESCE(recent.orchestrator.cluster.name, orchestrator.cluster.name),
 orchestrator.cluster.url = COALESCE(recent.orchestrator.cluster.url, orchestrator.cluster.url),
 orchestrator.cluster.version = COALESCE(recent.orchestrator.cluster.version, orchestrator.cluster.version),
 orchestrator.namespace = COALESCE(recent.orchestrator.namespace, orchestrator.namespace),
 orchestrator.organization = COALESCE(recent.orchestrator.organization, orchestrator.organization),
 orchestrator.resource.annotation = COALESCE(recent.orchestrator.resource.annotation, orchestrator.resource.annotation),
 orchestrator.resource.id = COALESCE(recent.orchestrator.resource.id, orchestrator.resource.id),
 orchestrator.resource.ip = COALESCE(recent.orchestrator.resource.ip, orchestrator.resource.ip),
 orchestrator.resource.label = COALESCE(recent.orchestrator.resource.label, orchestrator.resource.label),
 orchestrator.resource.name = COALESCE(recent.orchestrator.resource.name, orchestrator.resource.name),
 orchestrator.resource.parent.type = COALESCE(recent.orchestrator.resource.parent.type, orchestrator.resource.parent.type),
 orchestrator.resource.type = COALESCE(recent.orchestrator.resource.type, orchestrator.resource.type),
 orchestrator.type = COALESCE(recent.orchestrator.type, orchestrator.type),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"generic\\",
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 cloud.account.id,
 cloud.account.name,
 cloud.availability_zone,
 cloud.instance.id,
 cloud.instance.name,
 cloud.machine.type,
 cloud.project.id,
 cloud.project.name,
 cloud.provider,
 cloud.region,
 cloud.service.name,
 host.architecture,
 host.boot.id,
 host.cpu.usage,
 host.disk.read.bytes,
 host.disk.write.bytes,
 host.domain,
 host.hostname,
 host.id,
 host.mac,
 host.name,
 host.network.egress.bytes,
 host.network.egress.packets,
 host.network.ingress.bytes,
 host.network.ingress.packets,
 host.pid_ns_ino,
 host.type,
 host.uptime,
 host.ip,
 user.domain,
 user.email,
 user.roles,
 user.hash,
 user.id,
 user.name,
 user.full_name,
 orchestrator.api_version,
 orchestrator.cluster.id,
 orchestrator.cluster.name,
 orchestrator.cluster.url,
 orchestrator.cluster.version,
 orchestrator.namespace,
 orchestrator.organization,
 orchestrator.resource.annotation,
 orchestrator.resource.id,
 orchestrator.resource.ip,
 orchestrator.resource.label,
 orchestrator.resource.name,
 orchestrator.resource.parent.type,
 orchestrator.resource.type,
 orchestrator.type,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for host entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((host.entity.id IS NOT NULL AND host.entity.id != \\"\\") OR (host.id IS NOT NULL AND host.id != \\"\\") OR (host.name IS NOT NULL AND host.name != \\"\\") OR (host.hostname IS NOT NULL AND host.hostname != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), host.entity.id,
(host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.name, \\".\\", host.domain),
(host.hostname IS NOT NULL AND host.hostname != \\"\\" AND host.domain IS NOT NULL AND host.domain != \\"\\"), CONCAT(host.hostname, \\".\\", host.domain),
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE host.name IS NOT NULL,
 recent.host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE host.entity.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.host.domain = TOP(MV_DEDUPE(TO_STRING(host.domain)), 10) WHERE host.domain IS NOT NULL,
 recent.host.hostname = TOP(MV_DEDUPE(TO_STRING(host.hostname)), 10) WHERE host.hostname IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.os.name = TOP(MV_DEDUPE(TO_STRING(host.os.name)), 10) WHERE host.os.name IS NOT NULL,
 recent.host.os.type = TOP(MV_DEDUPE(TO_STRING(host.os.type)), 10) WHERE host.os.type IS NOT NULL,
 recent.host.ip = TOP(MV_DEDUPE(TO_IP(host.ip)), 10) WHERE host.ip IS NOT NULL,
 recent.host.mac = TOP(MV_DEDUPE(TO_STRING(host.mac)), 10) WHERE host.mac IS NOT NULL,
 recent.host.type = TOP(MV_DEDUPE(TO_STRING(host.type)), 10) WHERE host.type IS NOT NULL,
 recent.host.architecture = TOP(MV_DEDUPE(TO_STRING(host.architecture)), 10) WHERE host.architecture IS NOT NULL,
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp) WHERE _index IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.host.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp) WHERE host.risk.calculated_level IS NOT NULL,
 recent.host.risk.calculated_score = LAST(host.risk.calculated_score, @timestamp) WHERE host.risk.calculated_score IS NOT NULL,
 recent.host.risk.calculated_score_norm = LAST(host.risk.calculated_score_norm, @timestamp) WHERE host.risk.calculated_score_norm IS NOT NULL,
 recent.entity.source = LAST(TO_STRING(host.entity.source), @timestamp) WHERE host.entity.source IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE host.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE host.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE host.entity.url IS NOT NULL,
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(host.entity.attributes.Privileged), @timestamp) WHERE host.entity.attributes.Privileged IS NOT NULL,
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(host.entity.attributes.Asset), @timestamp) WHERE host.entity.attributes.Asset IS NOT NULL,
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(host.entity.attributes.Managed), @timestamp) WHERE host.entity.attributes.Managed IS NOT NULL,
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.Mfa_enabled), @timestamp) WHERE host.entity.attributes.Mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(host.entity.lifecycle.First_seen), @timestamp) WHERE host.entity.lifecycle.First_seen IS NOT NULL,
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(host.entity.lifecycle.Last_activity), @timestamp) WHERE host.entity.lifecycle.Last_activity IS NOT NULL,
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(host.entity.behaviors.Brute_force_victim), @timestamp) WHERE host.entity.behaviors.Brute_force_victim IS NOT NULL,
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(host.entity.behaviors.New_country_login), @timestamp) WHERE host.entity.behaviors.New_country_login IS NOT NULL,
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(host.entity.behaviors.Used_usb_device), @timestamp) WHERE host.entity.behaviors.Used_usb_device IS NOT NULL,
 recent.entity.risk.calculated_level = LAST(TO_STRING(host.entity.risk.calculated_level), @timestamp) WHERE host.entity.risk.calculated_level IS NOT NULL,
 recent.entity.risk.calculated_score = LAST(host.entity.risk.calculated_score, @timestamp) WHERE host.entity.risk.calculated_score IS NOT NULL,
 recent.entity.risk.calculated_score_norm = LAST(host.entity.risk.calculated_score_norm, @timestamp) WHERE host.entity.risk.calculated_score_norm IS NOT NULL,
 recent.entity.relationships.Communicates_with = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Communicates_with)), 10) WHERE host.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.Depends_on = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Depends_on)), 10) WHERE host.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.Dependent_of = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Dependent_of)), 10) WHERE host.entity.relationships.Dependent_of IS NOT NULL,
 recent.entity.relationships.Owned_by = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Owned_by)), 10) WHERE host.entity.relationships.Owned_by IS NOT NULL,
 recent.entity.relationships.Accessed_frequently_by = TOP(MV_DEDUPE(TO_STRING(host.entity.relationships.Accessed_frequently_by)), 10) WHERE host.entity.relationships.Accessed_frequently_by IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"host:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 host.entity.id = COALESCE(host.entity.id, recent.host.entity.id),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 host.domain = MV_SLICE(MV_UNION(recent.host.domain, host.domain), 0, 9),
 host.hostname = MV_SLICE(MV_UNION(recent.host.hostname, host.hostname), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.os.name = MV_SLICE(MV_UNION(recent.host.os.name, host.os.name), 0, 9),
 host.os.type = MV_SLICE(MV_UNION(recent.host.os.type, host.os.type), 0, 9),
 host.ip = MV_SLICE(MV_UNION(recent.host.ip, host.ip), 0, 9),
 host.mac = MV_SLICE(MV_UNION(recent.host.mac, host.mac), 0, 9),
 host.type = MV_SLICE(MV_UNION(recent.host.type, host.type), 0, 9),
 host.architecture = MV_SLICE(MV_UNION(recent.host.architecture, host.architecture), 0, 9),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 host.risk.calculated_level = COALESCE(recent.host.risk.calculated_level, host.risk.calculated_level),
 host.risk.calculated_score = COALESCE(recent.host.risk.calculated_score, host.risk.calculated_score),
 host.risk.calculated_score_norm = COALESCE(recent.host.risk.calculated_score_norm, host.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), 0, 9),
 entity.relationships.Depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), 0, 9),
 entity.relationships.Dependent_of = MV_SLICE(MV_UNION(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), 0, 9),
 entity.relationships.Owned_by = MV_SLICE(MV_UNION(recent.entity.relationships.Owned_by, entity.relationships.Owned_by), 0, 9),
 entity.relationships.Accessed_frequently_by = MV_SLICE(MV_UNION(recent.entity.relationships.Accessed_frequently_by, entity.relationships.Accessed_frequently_by), 0, 9),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"host\\",
 entity.type = COALESCE(entity.type, \\"Host\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 host.entity.id,
 host.name,
 host.domain,
 host.hostname,
 host.id,
 host.os.name,
 host.os.type,
 host.ip,
 host.mac,
 host.type,
 host.architecture,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 host.risk.calculated_level,
 host.risk.calculated_score,
 host.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 entity.relationships.Owned_by,
 entity.relationships.Accessed_frequently_by,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for service entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((service.entity.id IS NOT NULL AND service.entity.id != \\"\\") OR (service.name IS NOT NULL AND service.name != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((service.entity.id IS NOT NULL AND service.entity.id != \\"\\"), service.entity.id,
(service.name IS NOT NULL AND service.name != \\"\\"), service.name, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(service.name), @timestamp) WHERE service.name IS NOT NULL,
 recent.service.entity.id = FIRST(TO_STRING(service.entity.id), @timestamp) WHERE service.entity.id IS NOT NULL,
 recent.service.name = TOP(MV_DEDUPE(TO_STRING(service.name)), 10) WHERE service.name IS NOT NULL,
 recent.service.address = TOP(MV_DEDUPE(TO_STRING(service.address)), 10) WHERE service.address IS NOT NULL,
 recent.service.environment = TOP(MV_DEDUPE(TO_STRING(service.environment)), 10) WHERE service.environment IS NOT NULL,
 recent.service.ephemeral_id = TOP(MV_DEDUPE(TO_STRING(service.ephemeral_id)), 10) WHERE service.ephemeral_id IS NOT NULL,
 recent.service.id = TOP(MV_DEDUPE(TO_STRING(service.id)), 10) WHERE service.id IS NOT NULL,
 recent.service.node.name = TOP(MV_DEDUPE(TO_STRING(service.node.name)), 10) WHERE service.node.name IS NOT NULL,
 recent.service.node.roles = TOP(MV_DEDUPE(TO_STRING(service.node.roles)), 10) WHERE service.node.roles IS NOT NULL,
 recent.service.node.role = TOP(MV_DEDUPE(TO_STRING(service.node.role)), 10) WHERE service.node.role IS NOT NULL,
 recent.service.state = LAST(TO_STRING(service.state), @timestamp) WHERE service.state IS NOT NULL,
 recent.service.type = TOP(MV_DEDUPE(TO_STRING(service.type)), 10) WHERE service.type IS NOT NULL,
 recent.service.version = LAST(TO_STRING(service.version), @timestamp) WHERE service.version IS NOT NULL,
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp) WHERE _index IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.service.risk.calculated_level = LAST(TO_STRING(service.risk.calculated_level), @timestamp) WHERE service.risk.calculated_level IS NOT NULL,
 recent.service.risk.calculated_score = LAST(service.risk.calculated_score, @timestamp) WHERE service.risk.calculated_score IS NOT NULL,
 recent.service.risk.calculated_score_norm = LAST(service.risk.calculated_score_norm, @timestamp) WHERE service.risk.calculated_score_norm IS NOT NULL,
 recent.entity.source = LAST(TO_STRING(service.entity.source), @timestamp) WHERE service.entity.source IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(service.entity.type), @timestamp) WHERE service.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(service.entity.sub_type), @timestamp) WHERE service.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(service.entity.url), @timestamp) WHERE service.entity.url IS NOT NULL,
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(service.entity.attributes.Privileged), @timestamp) WHERE service.entity.attributes.Privileged IS NOT NULL,
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(service.entity.attributes.Asset), @timestamp) WHERE service.entity.attributes.Asset IS NOT NULL,
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(service.entity.attributes.Managed), @timestamp) WHERE service.entity.attributes.Managed IS NOT NULL,
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(service.entity.attributes.Mfa_enabled), @timestamp) WHERE service.entity.attributes.Mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(service.entity.lifecycle.First_seen), @timestamp) WHERE service.entity.lifecycle.First_seen IS NOT NULL,
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(service.entity.lifecycle.Last_activity), @timestamp) WHERE service.entity.lifecycle.Last_activity IS NOT NULL,
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(service.entity.behaviors.Brute_force_victim), @timestamp) WHERE service.entity.behaviors.Brute_force_victim IS NOT NULL,
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(service.entity.behaviors.New_country_login), @timestamp) WHERE service.entity.behaviors.New_country_login IS NOT NULL,
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(service.entity.behaviors.Used_usb_device), @timestamp) WHERE service.entity.behaviors.Used_usb_device IS NOT NULL,
 recent.entity.risk.calculated_level = LAST(TO_STRING(service.entity.risk.calculated_level), @timestamp) WHERE service.entity.risk.calculated_level IS NOT NULL,
 recent.entity.risk.calculated_score = LAST(service.entity.risk.calculated_score, @timestamp) WHERE service.entity.risk.calculated_score IS NOT NULL,
 recent.entity.risk.calculated_score_norm = LAST(service.entity.risk.calculated_score_norm, @timestamp) WHERE service.entity.risk.calculated_score_norm IS NOT NULL,
 recent.entity.relationships.Communicates_with = TOP(MV_DEDUPE(TO_STRING(service.entity.relationships.Communicates_with)), 10) WHERE service.entity.relationships.Communicates_with IS NOT NULL,
 recent.entity.relationships.Depends_on = TOP(MV_DEDUPE(TO_STRING(service.entity.relationships.Depends_on)), 10) WHERE service.entity.relationships.Depends_on IS NOT NULL,
 recent.entity.relationships.Dependent_of = TOP(MV_DEDUPE(TO_STRING(service.entity.relationships.Dependent_of)), 10) WHERE service.entity.relationships.Dependent_of IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"service:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 service.entity.id = COALESCE(service.entity.id, recent.service.entity.id),
 service.name = MV_SLICE(MV_UNION(recent.service.name, service.name), 0, 9),
 service.address = MV_SLICE(MV_UNION(recent.service.address, service.address), 0, 9),
 service.environment = MV_SLICE(MV_UNION(recent.service.environment, service.environment), 0, 9),
 service.ephemeral_id = MV_SLICE(MV_UNION(recent.service.ephemeral_id, service.ephemeral_id), 0, 9),
 service.id = MV_SLICE(MV_UNION(recent.service.id, service.id), 0, 9),
 service.node.name = MV_SLICE(MV_UNION(recent.service.node.name, service.node.name), 0, 9),
 service.node.roles = MV_SLICE(MV_UNION(recent.service.node.roles, service.node.roles), 0, 9),
 service.node.role = MV_SLICE(MV_UNION(recent.service.node.role, service.node.role), 0, 9),
 service.state = COALESCE(recent.service.state, service.state),
 service.type = MV_SLICE(MV_UNION(recent.service.type, service.type), 0, 9),
 service.version = COALESCE(recent.service.version, service.version),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 service.risk.calculated_level = COALESCE(recent.service.risk.calculated_level, service.risk.calculated_level),
 service.risk.calculated_score = COALESCE(recent.service.risk.calculated_score, service.risk.calculated_score),
 service.risk.calculated_score_norm = COALESCE(recent.service.risk.calculated_score_norm, service.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 entity.relationships.Communicates_with = MV_SLICE(MV_UNION(recent.entity.relationships.Communicates_with, entity.relationships.Communicates_with), 0, 9),
 entity.relationships.Depends_on = MV_SLICE(MV_UNION(recent.entity.relationships.Depends_on, entity.relationships.Depends_on), 0, 9),
 entity.relationships.Dependent_of = MV_SLICE(MV_UNION(recent.entity.relationships.Dependent_of, entity.relationships.Dependent_of), 0, 9),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"service\\",
 entity.type = COALESCE(entity.type, \\"Service\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 service.entity.id,
 service.name,
 service.address,
 service.environment,
 service.ephemeral_id,
 service.id,
 service.node.name,
 service.node.roles,
 service.node.role,
 service.state,
 service.type,
 service.version,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 service.risk.calculated_level,
 service.risk.calculated_score,
 service.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 entity.relationships.Communicates_with,
 entity.relationships.Depends_on,
 entity.relationships.Dependent_of,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;

exports[`buildLogsExtractionEsqlQuery generates the expected query for user entity description 1`] = `
"FROM test-index-*
    METADATA _index
  | WHERE ((user.entity.id IS NOT NULL AND user.entity.id != \\"\\") OR (user.id IS NOT NULL AND user.id != \\"\\") OR (user.name IS NOT NULL AND user.name != \\"\\") OR (user.email IS NOT NULL AND user.email != \\"\\"))
      AND @timestamp > TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
  | SORT @timestamp ASC
  | LIMIT 10000
  | EVAL recent.entity.EngineMetadata.UntypedId = CASE((user.entity.id IS NOT NULL AND user.entity.id != \\"\\"), user.entity.id,
(user.name IS NOT NULL AND user.name != \\"\\" AND host.entity.id IS NOT NULL AND host.entity.id != \\"\\"), CONCAT(user.name, \\"@\\", host.entity.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.id IS NOT NULL AND host.id != \\"\\"), CONCAT(user.name, \\"@\\", host.id),
(user.name IS NOT NULL AND user.name != \\"\\" AND host.name IS NOT NULL AND host.name != \\"\\"), CONCAT(user.name, \\"@\\", host.name),
(user.id IS NOT NULL AND user.id != \\"\\"), user.id,
(user.email IS NOT NULL AND user.email != \\"\\"), user.email,
(user.name IS NOT NULL AND user.name != \\"\\" AND user.domain IS NOT NULL AND user.domain != \\"\\"), CONCAT(user.name, \\"@\\", user.domain),
(user.name IS NOT NULL AND user.name != \\"\\"), user.name, NULL)
  | STATS
    recent.timestamp = MAX(@timestamp),
    recent.entity.name = LAST(TO_STRING(user.name), @timestamp) WHERE user.name IS NOT NULL,
 recent.user.entity.id = FIRST(TO_STRING(user.entity.id), @timestamp) WHERE user.entity.id IS NOT NULL,
 recent.user.domain = TOP(MV_DEDUPE(TO_STRING(user.domain)), 10) WHERE user.domain IS NOT NULL,
 recent.user.email = TOP(MV_DEDUPE(TO_STRING(user.email)), 10) WHERE user.email IS NOT NULL,
 recent.user.name = TOP(MV_DEDUPE(TO_STRING(user.name)), 10) WHERE user.name IS NOT NULL,
 recent.user.full_name = TOP(MV_DEDUPE(TO_STRING(user.full_name)), 10) WHERE user.full_name IS NOT NULL,
 recent.user.hash = TOP(MV_DEDUPE(TO_STRING(user.hash)), 10) WHERE user.hash IS NOT NULL,
 recent.user.id = TOP(MV_DEDUPE(TO_STRING(user.id)), 10) WHERE user.id IS NOT NULL,
 recent.user.roles = TOP(MV_DEDUPE(TO_STRING(user.roles)), 10) WHERE user.roles IS NOT NULL,
 recent.entity.source = FIRST(TO_STRING(_index), @timestamp) WHERE _index IS NOT NULL,
 recent.asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE asset.id IS NOT NULL,
 recent.asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE asset.name IS NOT NULL,
 recent.asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE asset.owner IS NOT NULL,
 recent.asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE asset.serial_number IS NOT NULL,
 recent.asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE asset.model IS NOT NULL,
 recent.asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE asset.vendor IS NOT NULL,
 recent.asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE asset.environment IS NOT NULL,
 recent.asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE asset.criticality IS NOT NULL,
 recent.asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE asset.business_unit IS NOT NULL,
 recent.user.risk.calculated_level = LAST(TO_STRING(user.risk.calculated_level), @timestamp) WHERE user.risk.calculated_level IS NOT NULL,
 recent.user.risk.calculated_score = LAST(user.risk.calculated_score, @timestamp) WHERE user.risk.calculated_score IS NOT NULL,
 recent.user.risk.calculated_score_norm = LAST(user.risk.calculated_score_norm, @timestamp) WHERE user.risk.calculated_score_norm IS NOT NULL,
 recent.entity.source = LAST(TO_STRING(user.entity.source), @timestamp) WHERE user.entity.source IS NOT NULL,
 recent.entity.type = LAST(TO_STRING(user.entity.type), @timestamp) WHERE user.entity.type IS NOT NULL,
 recent.entity.sub_type = LAST(TO_STRING(user.entity.sub_type), @timestamp) WHERE user.entity.sub_type IS NOT NULL,
 recent.entity.url = LAST(TO_STRING(user.entity.url), @timestamp) WHERE user.entity.url IS NOT NULL,
 recent.entity.attributes.Privileged = LAST(TO_BOOLEAN(user.entity.attributes.Privileged), @timestamp) WHERE user.entity.attributes.Privileged IS NOT NULL,
 recent.entity.attributes.Asset = LAST(TO_BOOLEAN(user.entity.attributes.Asset), @timestamp) WHERE user.entity.attributes.Asset IS NOT NULL,
 recent.entity.attributes.Managed = LAST(TO_BOOLEAN(user.entity.attributes.Managed), @timestamp) WHERE user.entity.attributes.Managed IS NOT NULL,
 recent.entity.attributes.Mfa_enabled = LAST(TO_BOOLEAN(user.entity.attributes.Mfa_enabled), @timestamp) WHERE user.entity.attributes.Mfa_enabled IS NOT NULL,
 recent.entity.lifecycle.First_seen = LAST(TO_DATETIME(user.entity.lifecycle.First_seen), @timestamp) WHERE user.entity.lifecycle.First_seen IS NOT NULL,
 recent.entity.lifecycle.Last_activity = LAST(TO_DATETIME(user.entity.lifecycle.Last_activity), @timestamp) WHERE user.entity.lifecycle.Last_activity IS NOT NULL,
 recent.entity.behaviors.Brute_force_victim = LAST(TO_BOOLEAN(user.entity.behaviors.Brute_force_victim), @timestamp) WHERE user.entity.behaviors.Brute_force_victim IS NOT NULL,
 recent.entity.behaviors.New_country_login = LAST(TO_BOOLEAN(user.entity.behaviors.New_country_login), @timestamp) WHERE user.entity.behaviors.New_country_login IS NOT NULL,
 recent.entity.behaviors.Used_usb_device = LAST(TO_BOOLEAN(user.entity.behaviors.Used_usb_device), @timestamp) WHERE user.entity.behaviors.Used_usb_device IS NOT NULL,
 recent.entity.risk.calculated_level = LAST(TO_STRING(user.entity.risk.calculated_level), @timestamp) WHERE user.entity.risk.calculated_level IS NOT NULL,
 recent.entity.risk.calculated_score = LAST(user.entity.risk.calculated_score, @timestamp) WHERE user.entity.risk.calculated_score IS NOT NULL,
 recent.entity.risk.calculated_score_norm = LAST(user.entity.risk.calculated_score_norm, @timestamp) WHERE user.entity.risk.calculated_score_norm IS NOT NULL,
 recent.host.entity.id = TOP(MV_DEDUPE(TO_STRING(host.entity.id)), 10) WHERE host.entity.id IS NOT NULL,
 recent.host.id = TOP(MV_DEDUPE(TO_STRING(host.id)), 10) WHERE host.id IS NOT NULL,
 recent.host.name = TOP(MV_DEDUPE(TO_STRING(host.name)), 10) WHERE host.name IS NOT NULL,
 recent.entity.relationships.Accesses_frequently = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Accesses_frequently)), 10) WHERE user.entity.relationships.Accesses_frequently IS NOT NULL,
 recent.entity.relationships.Owns = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Owns)), 10) WHERE user.entity.relationships.Owns IS NOT NULL,
 recent.entity.relationships.Supervises = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Supervises)), 10) WHERE user.entity.relationships.Supervises IS NOT NULL,
 recent.entity.relationships.Supervised_by = TOP(MV_DEDUPE(TO_STRING(user.entity.relationships.Supervised_by)), 10) WHERE user.entity.relationships.Supervised_by IS NOT NULL
    BY recent.entity.EngineMetadata.UntypedId
  | EVAL recent.entity.id = CONCAT(\\"user:\\", recent.entity.EngineMetadata.UntypedId)
  | LOOKUP JOIN latest-index
      ON recent.entity.id == entity.id
  | RENAME
    recent.entity.id AS entity.id,
    recent.entity.EngineMetadata.UntypedId AS entity.EngineMetadata.UntypedId
  | EVAL
    entity.name = COALESCE(recent.entity.name, entity.name),
 user.entity.id = COALESCE(user.entity.id, recent.user.entity.id),
 user.domain = MV_SLICE(MV_UNION(recent.user.domain, user.domain), 0, 9),
 user.email = MV_SLICE(MV_UNION(recent.user.email, user.email), 0, 9),
 user.name = MV_SLICE(MV_UNION(recent.user.name, user.name), 0, 9),
 user.full_name = MV_SLICE(MV_UNION(recent.user.full_name, user.full_name), 0, 9),
 user.hash = MV_SLICE(MV_UNION(recent.user.hash, user.hash), 0, 9),
 user.id = MV_SLICE(MV_UNION(recent.user.id, user.id), 0, 9),
 user.roles = MV_SLICE(MV_UNION(recent.user.roles, user.roles), 0, 9),
 entity.source = COALESCE(entity.source, recent.entity.source),
 asset.id = COALESCE(recent.asset.id, asset.id),
 asset.name = COALESCE(recent.asset.name, asset.name),
 asset.owner = COALESCE(recent.asset.owner, asset.owner),
 asset.serial_number = COALESCE(recent.asset.serial_number, asset.serial_number),
 asset.model = COALESCE(recent.asset.model, asset.model),
 asset.vendor = COALESCE(recent.asset.vendor, asset.vendor),
 asset.environment = COALESCE(recent.asset.environment, asset.environment),
 asset.criticality = COALESCE(recent.asset.criticality, asset.criticality),
 asset.business_unit = COALESCE(recent.asset.business_unit, asset.business_unit),
 user.risk.calculated_level = COALESCE(recent.user.risk.calculated_level, user.risk.calculated_level),
 user.risk.calculated_score = COALESCE(recent.user.risk.calculated_score, user.risk.calculated_score),
 user.risk.calculated_score_norm = COALESCE(recent.user.risk.calculated_score_norm, user.risk.calculated_score_norm),
 entity.source = COALESCE(recent.entity.source, entity.source),
 entity.type = COALESCE(recent.entity.type, entity.type),
 entity.sub_type = COALESCE(recent.entity.sub_type, entity.sub_type),
 entity.url = COALESCE(recent.entity.url, entity.url),
 entity.attributes.Privileged = COALESCE(recent.entity.attributes.Privileged, entity.attributes.Privileged),
 entity.attributes.Asset = COALESCE(recent.entity.attributes.Asset, entity.attributes.Asset),
 entity.attributes.Managed = COALESCE(recent.entity.attributes.Managed, entity.attributes.Managed),
 entity.attributes.Mfa_enabled = COALESCE(recent.entity.attributes.Mfa_enabled, entity.attributes.Mfa_enabled),
 entity.lifecycle.First_seen = COALESCE(recent.entity.lifecycle.First_seen, entity.lifecycle.First_seen),
 entity.lifecycle.Last_activity = COALESCE(recent.entity.lifecycle.Last_activity, entity.lifecycle.Last_activity),
 entity.behaviors.Brute_force_victim = COALESCE(recent.entity.behaviors.Brute_force_victim, entity.behaviors.Brute_force_victim),
 entity.behaviors.New_country_login = COALESCE(recent.entity.behaviors.New_country_login, entity.behaviors.New_country_login),
 entity.behaviors.Used_usb_device = COALESCE(recent.entity.behaviors.Used_usb_device, entity.behaviors.Used_usb_device),
 entity.risk.calculated_level = COALESCE(recent.entity.risk.calculated_level, entity.risk.calculated_level),
 entity.risk.calculated_score = COALESCE(recent.entity.risk.calculated_score, entity.risk.calculated_score),
 entity.risk.calculated_score_norm = COALESCE(recent.entity.risk.calculated_score_norm, entity.risk.calculated_score_norm),
 host.entity.id = MV_SLICE(MV_UNION(recent.host.entity.id, host.entity.id), 0, 9),
 host.id = MV_SLICE(MV_UNION(recent.host.id, host.id), 0, 9),
 host.name = MV_SLICE(MV_UNION(recent.host.name, host.name), 0, 9),
 entity.relationships.Accesses_frequently = MV_SLICE(MV_UNION(recent.entity.relationships.Accesses_frequently, entity.relationships.Accesses_frequently), 0, 9),
 entity.relationships.Owns = MV_SLICE(MV_UNION(recent.entity.relationships.Owns, entity.relationships.Owns), 0, 9),
 entity.relationships.Supervises = MV_SLICE(MV_UNION(recent.entity.relationships.Supervises, entity.relationships.Supervises), 0, 9),
 entity.relationships.Supervised_by = MV_SLICE(MV_UNION(recent.entity.relationships.Supervised_by, entity.relationships.Supervised_by), 0, 9),
    @timestamp = recent.timestamp,
 entity.name = CASE((entity.name IS NULL OR entity.name == \\"\\"), entity.EngineMetadata.UntypedId, entity.name),
 entity.EngineMetadata.Type = \\"user\\",
 entity.type = COALESCE(entity.type, \\"Identity\\"),
    entity.hashedId = HASH(\\"MD5\\", entity.id)
  | KEEP entity.name,
 user.entity.id,
 user.domain,
 user.email,
 user.name,
 user.full_name,
 user.hash,
 user.id,
 user.roles,
 entity.source,
 asset.id,
 asset.name,
 asset.owner,
 asset.serial_number,
 asset.model,
 asset.vendor,
 asset.environment,
 asset.criticality,
 asset.business_unit,
 user.risk.calculated_level,
 user.risk.calculated_score,
 user.risk.calculated_score_norm,
 entity.source,
 entity.type,
 entity.sub_type,
 entity.url,
 entity.attributes.Privileged,
 entity.attributes.Asset,
 entity.attributes.Managed,
 entity.attributes.Mfa_enabled,
 entity.lifecycle.First_seen,
 entity.lifecycle.Last_activity,
 entity.behaviors.Brute_force_victim,
 entity.behaviors.New_country_login,
 entity.behaviors.Used_usb_device,
 entity.risk.calculated_level,
 entity.risk.calculated_score,
 entity.risk.calculated_score_norm,
 host.entity.id,
 host.id,
 host.name,
 entity.relationships.Accesses_frequently,
 entity.relationships.Owns,
 entity.relationships.Supervises,
 entity.relationships.Supervised_by,
 @timestamp,
 entity.id,
 entity.name,
 entity.EngineMetadata.UntypedId,
 entity.hashedId,
 entity.EngineMetadata.Type
  | SORT @timestamp ASC"
`;
